# simgrid_platform_inspector

./: .gitignore  CMakeLists.txt  README.md  platform_creator.cpp
CPP_Platform_Creator_Example/: CMakeLists.txt  main.cpp  platform_creator.cpp  two_hosts_in_zones.xml
CPP_Platform_Creator_Example/CMakeModules/: FindSimGrid.cmake
CPP_Platform_Creator_Example/src/: PlatformCreator.hpp  main.cpp  platform_creator.cpp
src/: main.cpp  platform_creator.cpp  sample_platform.cpp
